SystemUI: Network Traffic [1/3]
 * Fix visibility when all data is disabled
 * Remove network coloring and make network meter play nice
   with dark mode by dwitherell
 * Port to cm-14.1 (vector drawables are courtesy of kover)

Change-Id: Ib947832860970a3bccfac70d27a4761f6164d3d5

--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -132,4 +132,6 @@
         <item></item> <!-- STREAM_DTMF -->
         <item></item> <!-- STREAM_TTS -->
     </string-array>
+
+    <string name="network_traffic_format"><xliff:g id="value">%1$s</xliff:g> <xliff:g id="unit" example="kB">%2$s</xliff:g>/s</string>
 </resources>
