SystemUI: Introduce custom QS tile management
This squashes the following commits from CM 13.0:
cf6674d766fe683e52e5c58e63152e9abd6ece89 SystemUi: Reintroduce custom qs tiles management.
552ab56f722a02008fd808a71ec5e8e99ec910cf qs: use external resource package for custom tiles
f20ea48c6eee4bf011c441a53502f05878b43a52 SystemUi: Nuke DONT_TRACK label, and introduce CMMetricsLogger constants.

Change-Id: I88dbf3911d4783de7c3f231aa57c51ce43bc8ae6

--- a/packages/SystemUI/res/values/cm_styles.xml
+++ b/packages/SystemUI/res/values/cm_styles.xml
@@ -45,4 +45,8 @@
         <item name="blendMode">overlay</item>
     </style>
 
+    <!-- Custom QS tile detail style -->
+    <style name="TextAppearance.QS.DetailItemSub">
+        <item name="android:textSize">@dimen/qs_detail_item_secondary_text_size</item>
+    </style>
 </resources>
