--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -132,4 +132,8 @@
         <item></item> <!-- STREAM_DTMF -->
         <item></item> <!-- STREAM_TTS -->
     </string-array>
+
+    <!-- Custom QS tiles -->
+    <string name="quick_settings_custom_tile_detail_title">Custom Tile</string>
+    <string name="quick_settings_remove">Remove tile</string>
 </resources>
