SystemUI: Introduce custom QS tile management
This squashes the following commits from CM 13.0:
cf6674d766fe683e52e5c58e63152e9abd6ece89 SystemUi: Reintroduce custom qs tiles management.
552ab56f722a02008fd808a71ec5e8e99ec910cf qs: use external resource package for custom tiles
f20ea48c6eee4bf011c441a53502f05878b43a52 SystemUi: Nuke DONT_TRACK label, and introduce CMMetricsLogger constants.

Change-Id: I88dbf3911d4783de7c3f231aa57c51ce43bc8ae6

--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -138,4 +138,8 @@
          values/config.xml) and must be truncated.
          [CHAR LIMIT=4] -->
     <string name="status_bar_notification_info_overflow" translatable="false">\u221E</string>
+
+    <!-- Custom QS tiles -->
+    <string name="quick_settings_custom_tile_detail_title">Custom Tile</string>
+    <string name="quick_settings_remove">Remove tile</string>
 </resources>
