[1/2] base: Add new feature of One-hand UI Mode
Bug: 33118157
Test: builds, and test feature in bug 33118157

Change-Id: Ic1b62a8d0821385cfe05818c72f9554588457a65
Signed-off-by: Joey Rizzoli <joey@lineageos.org>

--- a/core/res/res/values/cm_symbols.xml
+++ b/core/res/res/values/cm_symbols.xml
@@ -85,4 +85,8 @@
 
     <!-- Message to show the user when their vendor image doesn't match the build's fingerprint. -->
     <java-symbol type="string" name="lineage_system_error_manufacturer" />
+    
+    <!-- Single hand mode -->
+    <java-symbol type="string" name="singlehandmode_click_hint_message" />
+    <java-symbol type="string" name="singlehandmode_slide_hint_message" />
 </resources>
