SystemUI: Add a reversed version of OPA layout
AKA the pixel navbar

This is a combination of 8 commits.
This is the 1st commit message:
Pixel Navbar, reverse engineered from smali.

Notes:
- This is forcing the Pixel Home button on people,
  and it looks ugly with the other nav buttons being hollow

- There MAY still be a few fixes yet to be found in this code
  because it WAS a big file to RE from smali. I have yet to find
  any, but time is the best tester.

- Shoutout to @bigrushdog for providing a decompiled form used
  to verify the smali and as a guideline for the more obsure
  smali sections. It was a big help.

- Tagging myself here to see adoption rate. @USA-RedDragon

PureNexus Edits: By: @BeansTown106
*squashed with the landscape fix
*cleaned up some of the if statements and removed the unused constants
*removed the renamed icons, this was unnecessary as we will vectorize pixel icons

Change-Id: Ia45fc89e4f1518fcabc379c4790d1955a026daee

This is the commit message #2:

Vectorize all navbar icons (pixel theme) fix landscape bug
*the only thing navbar related that is not vectorized is the lightsout/carmode/menu icons

This is the commit message #3:

Pixel navbar: allow disabling based on config

Create new config_allowOpaLayout bool to allow themers to disable the Pixel Navbar

Fixes the dreaded "yellow" home button

Change-Id: I69ad9a0d87317c9d9732b08b33ceabd096afee77

This is the commit message #4:

Pixel Navbar animation toggle [1/2]

*made to work with the exposure for themers to disable navbar animation

Change-Id: Icb057edaf0c49933d6a882df3af627a076a14561

This is the commit message #5:

Pixel navbar: remove this. and OpaLayout references, cleanup

Since it's all on the same file, I don't think they are needed (?)
Replace some hardcoded int values with meaningful variables, like MotionEvent

Change-Id: I4d7b2fe57d3e1bf2fa034bf81efb11d37a5ebfba

This is the commit message #6:

Pixel navbar: Fix Home button FC

Change-Id: I7c463999a76ee02f1f5af615ddcff

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2802,4 +2802,7 @@
     <!-- Support in Surfaceflinger for blur layers.
          NOTE: This requires additional hardware-specific code. -->
     <bool name="config_uiBlurEnabled">false</bool>
+
+    <!-- Allow Opa (Pixel navbar) layout -->
+    <bool name="config_allowOpaLayout">true</bool>
 </resources>
