Introduce color engine.
Color engine is a system which allows changing the primary
and accent colors of the device theme on-the-fly.

Colors and design by arzbhatia

The following primary colors are supported:
* White (android default)
* Grey
* Pixel
* Dark

The following accent colors are supported:
* Blue
* Red
* Teal/Default
* Orange
* Green
* Yellow
* Purple
* Pink
* Cyan
* Grey

Ticket: NOUGAT-19

harryyoud: Merged pa_*.xml into existing cm_*.xml files,
and added PA copyright. Solved several trivial merge conflicts

Change-Id: I69347616e2e61e805647c2e1a3f3c4578f42847f
Signed-off-by: Thecrazyskull <anaskarbila@aospa.co>
Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/packages/SystemUI/res/values/cm_colors.xml
+++ b/packages/SystemUI/res/values/cm_colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2016 The CyanogenMod Project
+     Copyright (C) 2016-2017 Paranoid Android
+     Copyright (C) 2017 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -22,4 +24,6 @@
     <color name="status_bar_temperature_text_color">#FFFFFFFF</color>
     <color name="status_bar_temperature_location_text_color">#FFFFFFFF</color>
 
+    <!-- Pixel theme -->
+    <color name="pixel_primary_color">#242424</color>
 </resources>
