--- a/core/res/res/values/cm_symbols.xml
+++ b/core/res/res/values/cm_symbols.xml
@@ -2,7 +2,8 @@
 <!--
      Copyright (C) 2012-2015 The CyanogenMod Project
      Copyright (c) 2013, The Linux Foundation. All rights reserved.
-                   2017  The LineageOS Project
+     Copyright (C) 2014-2017 Paranoid Android
+     Copyright (C) 2017 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -111,4 +112,40 @@
 
     <!-- Whether light up buttons only when pressed -->
     <java-symbol type="bool" name="config_buttonLightOnKeypressOnly" />
+
+    <!-- Dark mode -->
+    <java-symbol type="style" name="Theme_DeviceDefault_Dark" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Dark_Red" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Dark_Blue" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Dark_Orange" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Dark_Green" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Dark_Yellow" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Dark_Purple" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Dark_Pink" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Dark_Cyan" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Dark_Grey" />
+
+    <!-- Grey mode -->
+    <java-symbol type="style" name="Theme_DeviceDefault_Grey" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Grey_Red" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Grey_Blue" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Grey_Orange" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Grey_Green" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Grey_Yellow" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Grey_Purple" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Grey_Pink" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Grey_Cyan" />
+    <java-symbol type="style" name="Theme_DeviceDefault_Grey_Grey" />
+
+    <!-- White mode -->
+    <java-symbol type="style" name="Theme_DeviceDefault_White" />
+    <java-symbol type="style" name="Theme_DeviceDefault_White_Red" />
+    <java-symbol type="style" name="Theme_DeviceDefault_White_Blue" />
+    <java-symbol type="style" name="Theme_DeviceDefault_White_Orange" />
+    <java-symbol type="style" name="Theme_DeviceDefault_White_Green" />
+    <java-symbol type="style" name="Theme_DeviceDefault_White_Yellow" />
+    <java-symbol type="style" name="Theme_DeviceDefault_White_Purple" />
+    <java-symbol type="style" name="Theme_DeviceDefault_White_Pink" />
+    <java-symbol type="style" name="Theme_DeviceDefault_White_Cyan" />
+    <java-symbol type="style" name="Theme_DeviceDefault_White_Grey" />
 </resources>
