--- a/packages/SystemUI/res/xml/tuner_prefs.xml
+++ b/packages/SystemUI/res/xml/tuner_prefs.xml
@@ -83,6 +83,10 @@
         <!-- other weird signal stuff -->
 
         <com.android.systemui.tuner.StatusBarSwitch
+            android:key="battery"
+            android:title="@string/status_bar_battery" />
+
+        <com.android.systemui.tuner.StatusBarSwitch
             android:key="alarm_clock"
             android:title="@string/status_bar_alarm" />
 
