--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2819,4 +2819,7 @@
 
   <!-- Accelerometer batching -->
   <java-symbol type="bool" name="config_useDefaultBatchingForAccel" />
+
+  <!-- Allow devices to use wakelock for flashlight -->
+  <java-symbol type="bool" name="config_useWakelockForFlashlight" />
 </resources>
