--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2457,6 +2457,9 @@
     <!-- If true, the display will be shifted around in ambient mode. -->
     <bool name="config_enableBurnInProtection">false</bool>
 
+    <!-- Allow the flashlight to use wakelocks -->
+    <bool name="config_useWakelockForFlashlight">false</bool>
+
     <!-- Specifies the maximum burn-in offset displacement from the center. If -1, no maximum value
          will be used. -->
     <integer name="config_burnInProtectionMaxRadius">-1</integer>
