--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2807,4 +2807,7 @@
 
     <!-- Whether to enable HumanInteractionController by default -->
     <bool name="config_HICEnabledDefault">true</bool>
+
+    <!-- Allow the flashlight to use wakelocks -->
+    <bool name="config_useWakeLockForFlashlight">false</bool>
 </resources>
