Move wakelock option for flashlight to CameraManager.
On some legacy devices, the flashlight can't stay on when screen is off.
With this change, the flashlight can use wakelock. For obvious reasons,
this is turned off by default and needs to be enabled using the overlay.
See: https://review.lineageos.org/#/c/64929/

The wakelock-code and overlay is moved to CameraManager to be also effective
for the new long-press power torch feature.

BUGBASH-179

Change-Id: Iee905d4e5ca7a69219d9753167213fcb80d7c19e

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2818,4 +2818,7 @@
 
   <!-- Accelerometer batching -->
   <java-symbol type="bool" name="config_useDefaultBatchingForAccel" />
+
+  <!-- Allow devices to use wakelock for flashlight -->
+  <java-symbol type="bool" name="config_useWakelockForFlashlight" />
 </resources>
