SystemUI: Bring back lockscreen tuner (1/2)
* Enables us to change lockscreen shortcuts, but they will be disabled as default.
  (Leaving SystemUI/config.xml as it is makes this possible.)

* Adds Voice Assist and Camera shortcuts to tuner and replaces "None" shortcut
  with real "None". Until now, "None" was either "None" or default shortcut, depending
  on "config_keyguardShowBlablaAffordance".

* It will be located under Settings > Security & Location > Lock screen preferences

Change-Id: Ibb107e550ff492219fb6fedd63f8fc8ee89753a9
Signed-off-by: eray orçunus <erayorcunus@gmail.com>

--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -143,4 +143,7 @@
 
     <!-- Name of the battery status bar icon. -->
     <string name="status_bar_battery">Battery</string>
+
+    <!-- Hint for custom lockscreen shortcuts -->
+    <string name="custom_swipe_hint">Swipe from icon for <xliff:g name="target">%s</xliff:g></string>
 </resources>
