Allow a vendor provided atv remote service
Change-Id: Ia28df14d76b0ff5c07978f3b48558d80e91b64df

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -3222,6 +3222,10 @@
          remote provider -->
     <string name="config_tvRemoteServicePackage" translatable="false"></string>
 
+    <!-- Package of the vendor tv remote service which can connect to tv
+         remote provider -->
+    <string name="config_tvVendorRemoteServicePackage" translatable="false"></string>
+
     <!-- True if the device supports persisting security logs across reboots.
          This requires the device's kernel to have pstore and pmsg enabled,
          and DRAM to be powered and refreshed through all stages of reboot. -->
