--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2894,6 +2894,7 @@
 
   <!-- TV Remote Service package -->
   <java-symbol type="string" name="config_tvRemoteServicePackage" />
+  <java-symbol type="string" name="config_tvVendorRemoteServicePackage" />
   <java-symbol type="string" name="notification_messaging_title_template" />
 
   <java-symbol type="bool" name="config_supportPreRebootSecurityLogs" />
