--- a/core/res/res/values/lineage_config.xml
+++ b/core/res/res/values/lineage_config.xml
@@ -16,6 +16,7 @@
 -->
 <resources>
     <!-- Button backlight -->
+    <bool name="config_deviceHasLightButton">false</bool>
     <integer name="config_buttonBrightnessSettingDefault">255</integer>
     <bool name="config_deviceHasVariableButtonBrightness">false</bool>
 
