--- a/core/res/res/values/lineage_symbols.xml
+++ b/core/res/res/values/lineage_symbols.xml
@@ -21,6 +21,7 @@
     <java-symbol type="string" name="adb_active_generic_notification_message" />
 
     <!-- Button backlight -->
+    <java-symbol type="bool" name="config_deviceHasLightButton" />
     <java-symbol type="integer" name="config_buttonBrightnessSettingDefault" />
     <java-symbol type="bool" name="config_deviceHasVariableButtonBrightness" />
 
