--- a/packages/SystemUI/res/values/dimens.xml
+++ b/packages/SystemUI/res/values/dimens.xml
@@ -391,6 +391,8 @@
 
     <dimen name="brightness_mirror_height">48dp</dimen>
 
+    <dimen name="qs_brightness_height">64dp</dimen>
+
     <!-- The width of the panel that holds the quick settings. -->
     <dimen name="qs_panel_width">@dimen/notification_panel_width</dimen>
 
