base: SystemUI: add qs fastcharge tile
Change-Id: I00f56d3b44b1e49bcf72652b35f93b6b3af5d8c7

--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -111,6 +111,9 @@
     <string name="quick_settings_aod_label">AOD</string>
     <string name="quick_settings_aod_off_powersave_label">AOD off\nBattery saver</string>
 
+    <!-- FastCharge QS tile -->
+    <string name="quick_settings_fastcharge_label">Fast charge</string>
+
     <!-- PowerShare QS tile -->
     <string name="quick_settings_powershare_label">Wireless PowerShare</string>
     <string name="quick_settings_powershare_off_powersave_label">Wireless PowerShare off\nBattery saver</string>
